premiere version du frontend realiser sur windows  petit proble me avec //this.options = new HttpRequest({headers:this.headers}) ce qui empeche l'ajout à la BD

--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Frontend"
+    }
+  },
+  "defaultProject": "Frontend",
+  "cli": {
+    "analytics": "d3d6ca32-d09f-4a90-8f8d-972dca3282fd"
+  }
 }
